[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ieee20305-ha"
version = "0.1.2"
description = "Home Assistant IEEE 2030.5 energy meter integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.9.0",
  "cryptography>=43.0.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
  ".",
  "src"
]
