[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ieee20305-ha"
version = "0.2.0"
description = "Home Assistant IEEE 2030.5 energy meter integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.9.0",
  "cryptography>=43.0.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
  ".",
  "src"
]

[tool.semantic_release]
tag_format = "v{version}"
commit_parser = "conventional"
commit_message = "chore(release): {version} [skip ci]"
changelog_file = "CHANGELOG.md"
version_toml = [
  "pyproject.toml:project.version"
]
version_variables = [
  "custom_components/ieee20305_meter/manifest.json:version"
]
major_on_zero = false
allow_zero_version = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
